added mobile adaptation

--- a/src/component/Footer.module.css
+++ b/src/component/Footer.module.css
@@ -205,7 +205,7 @@
 
     .footerMenuColumns {
         flex-direction: column;
-        gap: 0;
+        gap: 16px;
     }
 
     .footerLinkList {
