--- a/src/screens/Home/components/TrustedBy.module.css
+++ b/src/screens/Home/components/TrustedBy.module.css
@@ -58,3 +58,15 @@
     opacity: 1;
 }
 
+@media (max-width: 768px) {
+    .trustedByContainer {
+        flex-direction: column;
+        gap: 48px;
+    }
+
+    .trustedByLogos {
+        flex-direction: column;
+        justify-content: center;
+        gap: 64px;
+    }
+}
