--- a/src/screens/Home/components/Articles.module.css
+++ b/src/screens/Home/components/Articles.module.css
@@ -127,3 +127,67 @@
     font-size: 22px;
 }
 
+@media (max-width: 768px) {
+    .articlesSection {
+        padding: 50px 20px;
+        margin-top: 20px;
+    }
+    
+    .articlesContainer {
+        padding: 0;
+    }
+    
+    .articlesTitle {
+        font-size: 40px;
+        margin-bottom: 0;
+    }
+    
+    .articlesGrid {
+        grid-template-columns: 1fr;
+        gap: 30px;
+        padding-top: 40px;
+        width: 500px;
+        margin: 0 auto;
+        
+    }
+    
+    .articleCard {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    
+    .cardImageWrapper {
+        height: auto;
+    }
+    
+    .cardImage {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+    
+    .cardContent {
+        padding: 20px;
+    }
+    
+    .articleTitle {
+        font-size: 20px;
+    }
+    
+    .articleMeta {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        margin-top: 16px;
+        padding-top: 16px;
+    }
+    
+    .metaItem {
+        font-size: 14px;
+        gap: 5px;
+    }
+    
+    .metaIcon {
+        font-size: 18px;
+    }
+}
