--- a/src/screens/SingleBlog/components/Blog.module.css
+++ b/src/screens/SingleBlog/components/Blog.module.css
@@ -170,3 +170,23 @@
     color: #070707;
     text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+    .blogTitle {
+        font-size: 40px;
+        width: 100%;
+    }
+
+    .heroImage {
+        width: 96%;
+        height: auto;
+    }
+
+    .middleImage {
+        height: auto;
+    }
+
+    .quoteBlock {
+        padding: 40px 20px;
+    }
+}
